# accelerando

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  README_CN.md
.cargo/: config.toml
crates/accelerando/: Cargo.toml
crates/accelerando-aggregators/: Cargo.toml
crates/accelerando-aggregators/src/: lib.rs  time.rs
crates/accelerando-cli/: Cargo.toml
crates/accelerando-cli/src/: config.rs  main.rs  pipeline.rs  studio.rs
crates/accelerando-core/: Cargo.toml
crates/accelerando-core/src/: broker.rs  engine.rs  event.rs  footprint.rs  footprint_image.rs  heatmap.rs  lib.rs  market_time.rs  metrics.rs  params.rs  progress.rs  registry.rs  result.rs  traits.rs
crates/accelerando-example-aggregators/: Cargo.toml
crates/accelerando-example-aggregators/src/: lib.rs  range.rs  time.rs
crates/accelerando-example-indicators/: Cargo.toml
crates/accelerando-example-indicators/src/: adaptive_imbalance.rs  big_trades.rs  economic_calendar.rs  lib.rs  regime.rs  stacked_imbalance.rs  technical.rs  whitesnake.rs  zigzag.rs
crates/accelerando-example-sources/: Cargo.toml
crates/accelerando-example-sources/src/: csv.rs  lib.rs
crates/accelerando-example-strategy/: Cargo.toml
crates/accelerando-example-strategy/src/: indicator_cross.rs  lib.rs  regime_follow.rs
crates/accelerando-hyperopt/: Cargo.toml
crates/accelerando-hyperopt/src/: lib.rs  rng.rs
crates/accelerando-indicators/: Cargo.toml
crates/accelerando-indicators/src/: lib.rs
crates/accelerando-ml/: Cargo.toml
crates/accelerando-ml/src/: lib.rs
crates/accelerando-orderflow-features/: Cargo.toml
crates/accelerando-orderflow-features/src/: dataset.rs  features.rs  lib.rs
crates/accelerando-sources/: Cargo.toml
crates/accelerando-sources/src/: bookmap_csv.rs  lib.rs
crates/accelerando-strategy/: Cargo.toml
crates/accelerando-strategy/src/: lib.rs
crates/accelerando-web/: Cargo.toml
crates/accelerando-web/examples/: replay_smoke.rs
crates/accelerando-web/src/: dashboard.html  experiment.html  lib.rs  replay.rs  studio.html
crates/accelerando/src/: lib.rs
examples/: run.toml
