[workspace]
resolver = "2"
members = [
    "crates/accelerando-core",
    "crates/accelerando-example-sources",
    "crates/accelerando-example-aggregators",
    "crates/accelerando-example-indicators",
    "crates/accelerando-example-strategy",
    "crates/accelerando-orderflow-features",
    "crates/accelerando-hyperopt",
    "crates/accelerando-ml",
    "crates/accelerando-web",
    "crates/accelerando",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your/accelerando"
description = "Accelerando — high-speed, pluggable footprint backtesting framework. The world has been accelerated."

[workspace.dependencies]
accelerando-core = { path = "crates/accelerando-core" }
accelerando-example-sources = { path = "crates/accelerando-example-sources" }
accelerando-example-aggregators = { path = "crates/accelerando-example-aggregators" }
accelerando-example-indicators = { path = "crates/accelerando-example-indicators" }
accelerando-example-strategy = { path = "crates/accelerando-example-strategy" }
accelerando-orderflow-features = { path = "crates/accelerando-orderflow-features" }
accelerando-hyperopt = { path = "crates/accelerando-hyperopt" }
accelerando-ml = { path = "crates/accelerando-ml" }
accelerando-web = { path = "crates/accelerando-web" }
accelerando = { path = "crates/accelerando" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rayon = "1"
tiny_http = "0.12"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
