[package]
name = "accelerando-web"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Zero-build, Rust-served dashboard for Accelerando backtest results."

[dependencies]
accelerando-core = { workspace = true }
serde_json = { workspace = true }
tiny_http = { workspace = true }
